updating entities to use network derby and sequences

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-jooq')
 	compile('org.springframework.boot:spring-boot-starter-data-neo4j')
 	compile('org.springframework.boot:spring-boot-starter-validation')
-	runtime('org.apache.derby:derby')
+	runtime('org.apache.derby:derby:10.13.1.1')
+	runtime('org.apache.derby:derbyclient:10.13.1.1')
 	runtime('mysql:mysql-connector-java')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
