--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@
 #spring.datasource.derby.initialize=true
 spring.datasource.continue-on-error=true
 #spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.DerbyTenSevenDialect
+spring.jpa.properties.hibernate.default_schema=APP
+
+
 
