--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,12 @@ repositories {
 
 
 dependencies {
+	compile 'com.google.guava:guava:20.0'
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-data-couchbase')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.springframework.boot:spring-boot-starter-jooq')
-	compile('org.springframework.boot:spring-boot-starter-data-neo4j')
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	runtime('org.apache.derby:derby:10.13.1.1')
 	runtime('org.apache.derby:derbyclient:10.13.1.1')
